# Network-Traffic-Generator

./: CMakeLists.txt  README.md
include/: main.h  sender.h  sniffer.h
src/: CMakeLists.txt  main.c  sender.c  sniffer.c  sources.txt
